crates/rmcp-openapi/src/snapshots/rmcp_openapi__server__tests__create_structured_error_content_http_errors.snap
---
source: src/server.rs
expression: json_result
---
{
  "body": {
    "error": {
      "message": "Server unavailable",
      "status": 503,
      "type": "http-error"
    }
  },
  "status": 502
}
