crates/rmcp-openapi/src/snapshots/rmcp_openapi__server__tests__create_structured_error_content_invalid_parameter.snap
---
source: src/server.rs
expression: json_result
---
{
  "body": {
    "error": {
      "type": "validation-errors",
      "violations": [
        {
          "parameter": "pet_id",
          "suggestions": [
            "petId"
          ],
          "type": "invalid-parameter",
          "valid_parameters": [
            "petId",
            "timeout_seconds"
          ]
        }
      ]
    }
  },
  "status": 400
}
