crates/rmcp-openapi/src/snapshots/rmcp_openapi__server__tests__create_structured_error_content_tool_not_found-2.snap
---
source: src/server.rs
expression: json_result_with_suggestions
---
{
  "body": {
    "error": {
      "suggestions": [
        "getPetById",
        "getPetsByStatus"
      ],
      "tool_name": "getPetByID",
      "type": "tool-not-found"
    }
  },
  "status": 404
}
