crates/rmcp-openapi/src/snapshots/rmcp_openapi__server__tests__create_structured_error_content_tool_not_found.snap
---
source: src/server.rs
expression: json_result
---
{
  "body": {
    "error": {
      "suggestions": [],
      "tool_name": "unknownTool",
      "type": "tool-not-found"
    }
  },
  "status": 404
}
