crates/rmcp-openapi/src/snapshots/rmcp_openapi__server__tests__create_structured_error_content_validation.snap
---
source: src/server.rs
expression: json_result
---
{
  "body": {
    "error": {
      "type": "validation-errors",
      "violations": [
        {
          "message": "Missing required field",
          "parameter": "",
          "type": "constraint-violation"
        }
      ]
    }
  },
  "status": 400
}
