crates/rmcp-openapi/src/snapshots/rmcp_openapi__server__tests__tool_not_found_error_with_suggestions.snap
---
source: crates/rmcp-openapi/src/server.rs
expression: error_json
---
{
  "code": -32601,
  "message": "Tool 'getPetByID' not found",
  "data": {
    "suggestions": [
      "getPetById",
      "getPetsByStatus"
    ]
  }
}
